# mfg-epl-lakebase-ai-memory

./: .env.example  .gitignore  README.md  app.yaml  databricks.yml  pyproject.toml
agent_server/: agent.py  compaction.py  db_schema.py  gdpr.py  memory.py  memory_router.py  memory_tools.py  memory_vs.py  pii.py  start_server.py  utils.py
docs/: FEATURE_COMPARISON.md
examples/: demo-walkthrough.md
scripts/: benchmark_memory.py  grant_lakebase_permissions.py  setup_vector_search.py  start_app.py
tests/: TESTING_GUIDE.md  test_memory_backends.py
